member api functions added
